[tool.poetry]
name = "telegram"
version = "0.1.0"
description = ""
authors = ["denis <den@beloglazov.me>"]

[tool.poetry.dependencies]
python = "3.9"
web3 = "^5.31.1"
aiogram = "^2.23.1"
motor = "2.5.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
